--- a/platforms/android/app/src/main/assets/www/config.json
+++ b/platforms/android/app/src/main/assets/www/config.json
@@ -77,16 +77,16 @@
         93.75
     ],
     "customurlscheme": "moodlemobile",
-    "siteurl": "https://aquaponics.online",
+    "siteurl": "aquaponics.online",
     "sitename": "Ichthys Academy",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
     "privacypolicy": "https:\/\/moodle.net\/moodle-app-privacy\/",
-    "notificoncolor": "#f98012",
+    "notificoncolor": "#0000FF",
     "statusbarbg": false,
     "statusbarlighttext": false,
-    "statusbarbgios": "#f98012",
+    "statusbarbgios": "#0000FF",
     "statusbarlighttextios": true,
     "statusbarbgandroid": "#df7310",
     "statusbarlighttextandroid": true,
