--- a/www/config.json
+++ b/www/config.json
@@ -77,7 +77,7 @@
         93.75
     ],
     "customurlscheme": "moodlemobile",
-    "siteurl": "aquaponics.online",
+    "siteurl": "learn.aquaponics.africa",
     "sitename": "Ichthys Academy",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
